@@ -159,11 +159,10 @@ public class Attribute implements Map.Entry<String, String>, Cloneable  {
         return shouldCollapseAttribute(key, val, out);
     }
 
-    protected static boolean shouldCollapseAttribute(String key, String val, Document.OutputSettings out) {
-        // todo: optimize
-        return (val == null || "".equals(val) || val.equalsIgnoreCase(key))
-            && out.syntax() == Document.OutputSettings.Syntax.html
-            && isBooleanAttribute(key);
+    protected static boolean shouldCollapseAttribute(final String key, final String val, final Document.OutputSettings out) {
+        return (
+            out.syntax() == Document.OutputSettings.Syntax.html &&
+                (val == null || ("".equals(val) || val.equalsIgnoreCase(key)) && Attribute.isBooleanAttribute(key)));
     }
 
     /**
