@@ -1310,4 +1310,12 @@ public class ElementTest {
         assertFalse(doc.body().html().contains("class=\"\""));
     }
 
+    @Test
+    public void booleanAttributeOutput() {
+        Document doc = Jsoup.parse("<img src=foo noshade='' nohref async=async autofocus=false>");
+        Element img = doc.selectFirst("img");
+
+        assertEquals("<img src=\"foo\" noshade nohref async autofocus=\"false\">", img.outerHtml());
+    }
+
 }
