@@ -9,6 +9,9 @@ jsoup changelog
   * Improvement: added support for Deflate encoding.
     <https://github.com/jhy/jsoup/pull/982>
 
+  * Fixed an issue where boolean attributes with empty string values were not collapsing in HTML output.
+    <https://github.com/jhy/jsoup/issues/985>
+
 *** Release 1.11.2 [2017-Nov-19]
   * Improvement: added a new pseudo selector :matchText, which allows text nodes to match as if they were elements.
     This enables finding text that is only marked by a "br" tag, for example.
